# desmascarando-robos

./: .gitignore  pyproject.toml  requirements.txt
desmascarando_robos/data/raw/: conversion.py
desmascarando_robos/helper/classes/: CatBoostOptunaPipeline.py  DataVisualizer.py  FeatureEngineering.py  FeatureSelection.py  MLPipeline.py  Pipeline.py  Predictions.py  Queries.py
desmascarando_robos/helper/functions/: descriptive_statistics.py  feature_engineering.py
desmascarando_robos/notebooks/: c1.ipynb  c1_analise.ipynb  c1_gutto.ipynb  c1_gutto_ML.ipynb  c1_gutto_final_model.ipynb  c1_gutto_tunning.ipynb
desmascarando_robos/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
desmascarando_robos/notebooks/catboost_info/learn/: events.out.tfevents
